name:
  devon
version:
  0.1.0.0
synopsis:
  DeVoN - Developer object notation
description:
  Please see README.md
homepage:
  http://github.com/jxv/devon#readme
license:
  BSD3
license-file:
  LICENSE
author:
  Joe Vargas
maintainer:
  http://github.com/jxv
copyright:
  2016 Joe Vargas
category:
  Web
build-type:
  Simple
-- extra-source-files:
cabal-version:
  >=1.10

library
  hs-source-dirs:
    src
  exposed-modules:
    Data.Devon
  build-depends:
      base >= 4.7 && < 5
    , vector
    , containers
    , text
  default-language:
    Haskell2010
  default-extensions:
    OverloadedStrings
    TypeSynonymInstances
    FlexibleInstances
    FlexibleContexts
    GeneralizedNewtypeDeriving
    LambdaCase
    ScopedTypeVariables
    NamedFieldPuns
    MultiParamTypeClasses
    TypeFamilies
    TupleSections

test-suite devon-test
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    Spec.hs
  build-depends:
      base
    , devon
    , hspec
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N
  default-language:
    Haskell2010
  default-extensions:
    TypeSynonymInstances
    FlexibleInstances
    FlexibleContexts
    GeneralizedNewtypeDeriving
    LambdaCase
    ScopedTypeVariables
    NamedFieldPuns
    MultiParamTypeClasses
    TypeFamilies
    TupleSections
    TemplateHaskell

source-repository head
  type:
    git
  location:
    https://github.com/jxv/devon
